--- a/index.html
+++ b/index.html
@@ -4,18 +4,66 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>The Seven Wonders of The Ancient World</title>
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
   <header>
+
     <h1>The Seven Wonders of the Ancient World</h1>
-    <div class="">
-    <img src="Maerten_van_Heemskerck_-_Panorama_with_the_Abduction_of_Helen_Amidst_the_Wonders_of_the_Ancient_World_-_Walters_37656" alt="">
-<h2>Remarkable constructions of classical antiquity—lost in time</h2>
-<p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.
-</p>
-  </div>
+    <div><h2 class="intro">Remarkable constructions of classical antiquity—lost in time</h2><p class="intro">Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.
+      <img class="Maerten" src="images/Maerten_van_Heemskerck_-_Panorama_with_the_Abduction_of_Helen_Amidst_the_Wonders_of_the_Ancient_World_-_Walters_37656.jpg" alt="" role="presentation">
+</div>
+
 </header>
+<main>
+
+  <figure>
+  <img src="images/Temple_of_Artemis.jpg" alt="">
+  <figcaption>
+  <h3>Temple of Artemis </h3>
+  <dl>
+    <dt>Construction:</dt>
+    <dd>Circa 550 BC</dd>
+    <dt>Builders:</dt>
+    <dd>Greeks</dd>
+    <dt>Location:</dt>
+    <dd>Selçuk, Turkey</dd>
+    </dl>
+ </figcaption>
+  </figure>
+
+  <figure>
+  <img src="images/Colossus_of_Rhodes.jpg" alt="">
+  <figcaption>
+  <h3>Colossus of Rhodes </h3>
+  <dl>
+
+
+  <dt>Construction:</dt>
+  <dd>292-280 BC</dd>
+  <dt>Builders:</dt>
+  <dd>Greeks</dd>
+  <dt>Location:</dt>
+  <dd>Rhodes, Greece</dd>
+    </dl>
+  </figcaption>
+  </figure>
+
+<figure>
+  <img src="images/Hanging_Gardens_of_Babylon.jpg" alt="">
+<figcaption>
+  <h3> Gardens of Babylon</h3>
+ <dl>
+    <dt>Construction:</dt>
+    <dd>Circa 600 BC</dd>
+    <dt>Builders:</dt>
+    <dd>Babylonians</dd>
+    <dt>Location:</dt>
+    <dd>Nineveh, Iraq</dd>
+ </dl>
+ </figcaption>
+</figure>
+</main>
 </body>
 </html>
