--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
     <h1>The Seven Wonders of the Ancient World</h1>
     <div><h2 class="intro">Remarkable constructions of classical antiquity—lost in time</h2><p class="intro">Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.
-      <img class="Maerten" src="images/Maerten_van_Heemskerck_-_Panorama_with_the_Abduction_of_Helen_Amidst_the_Wonders_of_the_Ancient_World_-_Walters_37656.jpg" alt="" role="presentation">
+      <img class="maerten" src="images/maerten_van_heemskerck_-_panorama_with_the_abduction_of_helen_amidst_the_wonders_of_the_ancient_world_-_walters_37656.jpg" alt="" role="presentation">
 </div>
 
 </header>
 <main>
 
   <figure>
-  <img src="images/Temple_of_Artemis.jpg" alt="">
+  <img src="images/temple_of_artemis.jpg" alt="">
   <figcaption>
   <h3>Temple of Artemis </h3>
   <dl>
@@ -34,7 +34,7 @@
   </figure>
 
   <figure>
-  <img src="images/Colossus_of_Rhodes.jpg" alt="">
+  <img src="images/colossus_of_rhodes.jpg" alt="">
   <figcaption>
   <h3>Colossus of Rhodes </h3>
   <dl>
@@ -51,7 +51,7 @@
   </figure>
 
 <figure>
-  <img src="images/Hanging_Gardens_of_Babylon.jpg" alt="">
+  <img src="images/hanging_gardens_of_babylon.jpg" alt="">
 <figcaption>
   <h3> Gardens of Babylon</h3>
  <dl>
