--- a/index.html
+++ b/index.html
@@ -2,68 +2,68 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>The Seven Wonders of The Ancient World</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>The Seven Wonders of The Ancient World</title>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header role="banner">
 
     <h1>The Seven Wonders of the Ancient World</h1>
-    <div><h2 class="intro">Remarkable constructions of classical antiquity—lost in time</h2><p class="intro">Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.
-      <img class="maerten" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="" role="presentation">
-</div>
+    <div>
+      <h2 class="intro">Remarkable constructions of classical antiquity—lost in time</h2>
+      <p class="intro">Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
+      <img class="maerten" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-7656.jpg" alt="" role="presentation">
+    </div>
 
-</header>
-<main>
+  </header>
+  <main role="main">
+    <figure>
+      <img src="images/temple-of-artemis.jpg" alt="" role="presentation">
+      <figcaption>
+        <h3>Temple of Artemis </h3>
+        <dl>
+          <dt>Construction:</dt>
+          <dd>Circa 550 BC</dd>
+          <dt>Builders:</dt>
+          <dd>Greeks</dd>
+          <dt>Location:</dt>
+          <dd>Selçuk, Turkey</dd>
+        </dl>
+      </figcaption>
+    </figure>
 
-  <figure>
-  <img src="images/temple-of-artemis.jpg" alt="">
-  <figcaption>
-  <h3>Temple of Artemis </h3>
-  <dl>
-    <dt>Construction:</dt>
-    <dd>Circa 550 BC</dd>
-    <dt>Builders:</dt>
-    <dd>Greeks</dd>
-    <dt>Location:</dt>
-    <dd>Selçuk, Turkey</dd>
-    </dl>
- </figcaption>
-  </figure>
+    <figure>
+      <img src="images/colossus-of-rhodes.jpg" alt="" role="presentation">
+      <figcaption>
+        <h3>Colossus of Rhodes </h3>
+        <dl>
+          <dt>Construction:</dt>
+          <dd>292-280 BC</dd>
+          <dt>Builders:</dt>
+          <dd>Greeks</dd>
+          <dt>Location:</dt>
+          <dd>Rhodes, Greece</dd>
+        </dl>
+      </figcaption>
+    </figure>
 
-  <figure>
-  <img src="images/colossus-of-rhodes.jpg" alt="">
-  <figcaption>
-  <h3>Colossus of Rhodes </h3>
-  <dl>
-
-
-  <dt>Construction:</dt>
-  <dd>292-280 BC</dd>
-  <dt>Builders:</dt>
-  <dd>Greeks</dd>
-  <dt>Location:</dt>
-  <dd>Rhodes, Greece</dd>
-    </dl>
-  </figcaption>
-  </figure>
-
-<figure>
-  <img src="images/hanging-gardens-of-babylon.jpg" alt="">
-<figcaption>
-  <h3> Gardens of Babylon</h3>
- <dl>
-    <dt>Construction:</dt>
-    <dd>Circa 600 BC</dd>
-    <dt>Builders:</dt>
-    <dd>Babylonians</dd>
-    <dt>Location:</dt>
-    <dd>Nineveh, Iraq</dd>
- </dl>
- </figcaption>
-</figure>
-</main>
+    <figure>
+      <img src="images/hanging-gardens-of-babylon.jpg" alt="" role="presentation">
+      <figcaption>
+        <h3> Gardens of Babylon</h3>
+        <dl>
+          <dt>Construction:</dt>
+          <dd>Circa 600 BC</dd>
+          <dt>Builders:</dt>
+          <dd>Babylonians</dd>
+          <dt>Location:</dt>
+          <dd>Nineveh, Iraq</dd>
+        </dl>
+      </figcaption>
+    </figure>
+  </main>
 </body>
 </html>
